server/deploy/rating-history/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aoe2companion-rating-history
  namespace: default
  labels:
    app: aoe2companion-rating-history
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aoe2companion-rating-history
  template:
    metadata:
      labels:
        app: aoe2companion-rating-history
    spec:
      containers:
        - name: aoe2companion-rating-history
          image: denniske/aoe2companion-rating-history:$COMMIT_SHA1
          ports:
            - containerPort: 80
              name: http
