server/deploy/rating-history/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aoe2companion-rating-history
  namespace: default
  labels:
    app: aoe2companion-rating-history
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: aoe2companion-rating-history
