server/deploy/rating-history/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aoe2companion-rating-history-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - rating-history.aoe2companion.com
      secretName: rating-history-aoe2companion-com-tls
  rules:
    - host: rating-history.aoe2companion.com
      http:
        paths:
          - backend:
              serviceName: aoe2companion-rating-history
              servicePort: 80
